--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ header:
   pages:
     - name: Home
       slug: /
-    - name: Work
-    - name: Blog
+    - name: Publications
+    - name: Experiences
 
 footer:
   show_powered_by: true
