--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: Youyang Kim
 description: >- # this means to ignore newlines until "baseurl:"
   Portfolio of Youyang Kim.
 baseurl: "" # the subpath of the site
-url: "https://Youyk.github.io" # the base hostname & protocol for the site
+url: "https:/youyk.github.io" # the base hostname & protocol for the site
 og_image: /assets/img/profile-pic.jpg
 google_analytics: "UA-121636368-3"
 
@@ -13,8 +13,8 @@ header:
   pages:
     - name: Home
       slug: /
-    - name: Publications
-    - name: Experiences
+    - name: Work
+    - name: Blog
 
 footer:
   show_powered_by: true
